Fixed modal z-index

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,4 +1,3 @@
-
 body.active-modal {
   overflow-y: hidden;
 }
@@ -33,6 +32,7 @@ body.active-modal {
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.4s ease, visibility 0.4s ease;
+  z-index: 1000;
 }
 
 .modal.show {
@@ -62,7 +62,7 @@ body.active-modal {
   transition: transform 0.4s ease, opacity 0.4s ease;
 }
 
-.modal-title{
+.modal-title {
   text-align: right;
 }
 
@@ -72,7 +72,7 @@ body.active-modal {
 }
 
 .close-modal {
-  margin: 10px ;
+  margin: 10px;
 }
 
 textarea {
@@ -97,7 +97,7 @@ textarea {
   padding: 8px;
 }
 
-.char-limit-red{
+.char-limit-red {
   color: red;
 }
 
